--- a/style.css
+++ b/style.css
@@ -21,9 +21,6 @@ body{
     display: flex;
     width: 95vw;
     height: 87vh;
-    border: 2px solid rgb(63, 63, 63);
-    border-radius: 10px;
-    padding: 10px;
     gap: 20px;
 }
 
@@ -46,6 +43,7 @@ body{
 span{
     font-size: 25px;
     color: white;
+    margin-top: 5px;
 }
 
 .box{
